# bitcoin-rs-experiments

./: Cargo.toml
notebooks/: bitcoinExperimentsVisualizations-1.nb  bitcoinExperimentsVisualizations-2.nb
results/: large_transaction_count_time_series_100000.json  large_transaction_count_time_series_1000000.json  number_unique_miners_over_time.json  transaction_size_distribution.json  transaction_size_distribution_usd.json  transaction_volume_time_series.json
src/: main.rs  rates_table.rs
