[package]
name = "bitcoin-rs-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-explorer = { version = "^1.2", default-features = false }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
indicatif = "0.16"